--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -8,25 +8,21 @@
   = @checkin.longitude
 %p
   %b Text:
-  = @checkin.text
-%p
-  %b Image:
-  = @checkin.image
-%p
-  %b Audio:
-  = @checkin.audio
-%p
-  %b Video:
-  = @checkin.video
-%p
-  %b User:
-  = @checkin.user_id
-%p
-  %b Category:
-  = @checkin.category_id
-%p
-  %b Address:
-  = @checkin.address
+  - @checkin.assets.each do |asset|
+    = asset.words
+    %p
+      %b
+      = image_tag asset.media
+
+/ %p
+/   %b User:
+/   = @checkin.user_id
+/ %p
+/   %b Category:
+/   = @checkin.category_id
+/ %p
+/   %b Address:
+/   = @checkin.address
 
 = link_to 'Edit', edit_checkin_path(@checkin)
 \|
