rmagick setup, image scaling

--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -12,7 +12,7 @@
     = asset.words
     %p
       %b
-      = image_tag asset.media
+      = image_tag asset.media.show_checkin
 
 / %p
 /   %b User:
