adds leaflet map to checkin_form.js.coffee, optional mobile css, and custom marker example

--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -12,3 +12,13 @@
   width:90%;
   margin: 0 auto;
 }
+
+
+// CSS for leaflet map on mobile
+// body {
+//     padding: 0;
+//     margin: 0;
+// }
+// html, body, #map {
+//     height: 100%;
+// }
