--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -1,34 +1,5 @@
-%h1 Listing checkins
+%button#show_checkins_map Checkins
 
-%table
-  %tr
-    %th Latitude
-    %th Longitude
-    %th Text
-    %th Image
-    %th Audio
-    %th Video
-    %th User
-    %th Category
-    %th Address
-    %th
-    %th
-    %th
+#map{style:'height:500px'} 
 
-  - @checkins.each do |checkin|
-    %tr
-      %td= checkin.latitude
-      %td= checkin.longitude
-      - checkin.assets.each do |asset|
-        = asset.words
-        = image_tag asset.media
-      %td= checkin.user_id
-      %td= checkin.category_id
-      %td= checkin.address
-      %td= link_to 'Show', checkin
-      %td= link_to 'Edit', edit_checkin_path(checkin)
-      %td= link_to 'Destroy', checkin, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Checkin', new_checkin_path
+#checkins
