--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -1,3 +1,6 @@
+%script{src:'http:////ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'}
+= javascript_include_tag 'checkin_index_js'
+
 %button#show_checkins_map Checkins
 
 #map
