--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -1,3 +1,5 @@
+%script{src:'http:////ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'}
+
 .new_checkin_form
   #map
 
@@ -34,3 +36,5 @@
     /   = f.text_field :address
     .actions
       = f.submit 'Save'
+
+= javascript_include_tag 'checkin_form_js'
