--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -3,3 +3,12 @@
 #map
 
 #timeline
+  TIMELINE
+  .h1#title
+  #category
+  #asset
+  .buttons
+    %button#timeline_next_button Previous five
+    %button#timeline_previous_button Next five
+
+
