--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -1,9 +1,20 @@
-#category {
-  float: left;
-  margin: 10px;
+#timeline {
+  width: 100%;
+  height: 30px;
 }
 
+.checkin {
+  float: left;
+  display: inline;
+  margin: 10px;
+  height: 20%;
+  width: 20%;
+}
 
 .buttons {
   clear: both;
+}
+
+.checkin_category {
+  float: left;
 }
