--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -2,13 +2,9 @@
 
 #map
 
-#timeline
-  TIMELINE
-  .h1#title
-  #category
-  #asset
-  .buttons
-    %button#timeline_next_button Previous five
-    %button#timeline_previous_button Next five
+#timeline TIMELINE
+.buttons
+  %button#timeline_next_button Previous five
+  %button#timeline_previous_button Next five
 
 
