--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -13,6 +13,13 @@
   margin: 0 auto;
 }
 
+.button {
+  display: inline-block;
+  padding: 3% 5%;
+  border-radius: 10px;
+  background: #ccc;
+  margin: 5%;
+}
 
 // CSS for leaflet map on mobile
 // body {
