--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -1,3 +1,5 @@
+= current_user
+
 .new_checkin_form
   #map
 
@@ -18,8 +20,13 @@
       = f.text_field :title
     .field
       = f.fields_for :assets do |asset|
-        = asset.text_field :words
-        = asset.file_field :media
+        .words_or_media
+          .button Words
+          .button Media
+          .words_form
+            = asset.text_field :words
+          .media_form
+            = asset.file_field :media
         = asset.link_to_remove "Remove Asset"
       = f.link_to_add "Add an Asset", :assets
     .field
