--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -7,8 +7,8 @@
   float: left;
   display: inline;
   margin: 10px;
-  height: 20%;
-  width: 20%;
+  height: 200px;
+  width: 175px;
 }
 
 .buttons {
