--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,9 @@
     %link{:rel =>"stylesheet", :href =>"http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css"}
     = stylesheet_link_tag    "application", :media => "all"
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans", :rel => "stylesheet", :type => "text/css"}
+    / %link{:rel => "stylesheet" :href => "css/jPages.css"}
+    %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
+    / %script{:src=>"js/jPages.js"}
     %script{:src=>"http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"}
       = csrf_meta_tags
       -# this meta_tag below makes the check-in map render on mobile without unwanted scaling
