--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -5,20 +5,28 @@
   margin: 0 auto;
   padding: 1%;
   text-align: center;
+  
+  .words_button,
+  .media_button {
+    display: inline-block;
+    padding: 3% 5%;
+    border-radius: 10px;
+    background: #ccc;
+    margin: 5%;
+  }
+
+  .words_form,
+  .media_form {
+    display: none;
+  }
+
+
 }
 
 #map {
   height:400px;
   width:90%;
   margin: 0 auto;
-}
-
-.button {
-  display: inline-block;
-  padding: 3% 5%;
-  border-radius: 10px;
-  background: #ccc;
-  margin: 5%;
 }
 
 // CSS for leaflet map on mobile
