--- a/app/assets/stylesheets/jPages.css
+++ b/app/assets/stylesheets/jPages.css
@@ -1,35 +1,35 @@
 .holder {
-  margin: 15px 0;
+    margin:15px 0;
 }
-
 .holder a {
-  font-size: 12px;
-  cursor: pointer;
-  margin: 0 5px;
-  color: #333;
+    display:inline-block;
+    cursor:pointer;
+    margin:0 5px;
+    padding:4px;
+    border-radius:50%;
+    background-color:#D4EE5E;
 }
-
 .holder a:hover {
-  background-color: #222;
-  color: #fff;
+    background-color:#222;
+    color:#fff;
 }
-
-.holder a.jp-previous { margin-right: 15px; }
-.holder a.jp-next { margin-left: 15px; }
-
-.holder a.jp-current, a.jp-current:hover {
-  color: #FF4242;
-  font-weight: bold;
+.holder a.jp-previous {
+    margin-right:15px;
 }
-
-.holder a.jp-disabled, a.jp-disabled:hover {
-  color: #bbb;
+.holder a.jp-next {
+    margin-left:15px;
 }
-
-.holder a.jp-current, a.jp-current:hover,
-.holder a.jp-disabled, a.jp-disabled:hover {
-  cursor: default;
-  background: none;
+.holder a.jp-current,a.jp-current:hover {
+    color:#FF4242;
+    font-weight:bold;
 }
-
-.holder span { margin: 0 5px; }
+.holder a.jp-disabled,a.jp-disabled:hover {
+    color:#bbb;
+}
+.holder a.jp-current,a.jp-current:hover,.holder a.jp-disabled,a.jp-disabled:hover {
+    cursor:default;
+    background-color:#FF4242;
+}
+.holder span {
+    margin: 0 5px;
+}
