--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -5,17 +5,10 @@
 / JPAGES NAV PANEL
 .holder
 
-#timeline TIMELINE
-
 / JPAGES ITEM CONTAINER
-#itemContainer
-.buttons
-  %button#timeline_next_button Previous five
-  %button#timeline_previous_button Next five
+%ul#itemContainer
 
-
-<!-- Future navigation panel -->
-<div class="holder"></div>
-
-<!-- Item container (doesn't need to be an UL) -->
-<ul id="itemContainer">
+/ #timeline TIMELINE
+/ .buttons
+/   %button#timeline_next_button Previous five
+/   %button#timeline_previous_button Next five
