changes to serializer and contents of JSON object

--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -1,26 +1,14 @@
 %p#notice= notice
 
 %p
-  %b Category:
   = @checkin.category.name
 %p
-  %b Experience:
   - @checkin.assets.each do |asset|
     = asset.words
     %p
-      %b
       = image_tag asset.media.show_checkin
 
-/ %p
-/   %b User:
-/   = @checkin.user_id
-/ %p
-/   %b Category:
-/   = @checkin.category_id
-/ %p
-/   %b Address:
-/   = @checkin.address
+
 
 = link_to 'Edit', edit_checkin_path(@checkin)
-\|
-= link_to 'Back', checkins_path
+/ # = link_to 'Back', checkins_path
