--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,7 +1,9 @@
-.h1 NAVBAR
-- if current_user
-  = link_to 'Account', edit_user_path(current_user)
-  = link_to 'Logout', session_path(session), method: :delete, data: {confirm: 'Are you sure?'}
-- else
-  = link_to 'Sign up', new_user_path
-  = link_to 'Login', sign_in_path
+.h1.navbar
+  NAVBAR
+  - if current_user
+    = link_to 'Account', edit_user_path(current_user)
+    = link_to 'Logout', session_path(session), method: :delete, data: {confirm: 'Are you sure?'}
+    %button#show_checkins_map Checkins
+  - else
+    = link_to 'Sign up', new_user_path
+    = link_to 'Login', sign_in_path
