--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -18,22 +18,15 @@
       = f.text_field :title
     .field
       = f.fields_for :assets do |asset|
-        .words_or_media
-          .words_button Words
-          .media_button Media
-          .words_form
-            = asset.text_field :words
-          .media_form
-            = asset.file_field :media
+        = asset.text_field :words
+        = asset.file_field :media
         = asset.link_to_remove "Remove Asset"
       = f.link_to_add "Add an Asset", :assets
-    .field
-      %b New Category
-      %br
-      = f.fields_for :category do |category_fields|
-        = category_fields.text_field :name
-    .field
+    .field#existing_category
       %b Category
       = select "checkin", "category_id", Category.all.collect { |x| [x.name, x.id] }, include_blank: true
+    %button.new_category New Category
+    .field#new_category
+      = text_field_tag "category[name]"
     .actions
       = f.submit 'Save'
