removed non-images being displayed in show page

--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -6,7 +6,8 @@
   - @checkin.assets.each do |asset|
     = asset.words
     %p
-      = image_tag asset.media.show_checkin
+      - if asset.media.url != nil
+        = image_tag asset.media.show_checkin
 
 
 
