--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -1,4 +1,4 @@
-%form{id:'checkinsSearch'}
+%form{id:'checkinsSearch', data: { remote: true } }
   %input{type:'text',name:'location',id:'searchLocation'}
 
 #map
