checkin index timeline changes

--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -1,6 +1,7 @@
+%form{id:'checkinsSearch', data: { remote: true } }
+  %input{type:'text',name:'location',id:'searchLocation'}
+
 #map
-
-
 
 / JPAGES NAV PANEL
 .holder
