--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -21,8 +21,8 @@
         = f.fields_for :assets do |asset|
           = asset.text_field :words
           = asset.file_field :media
-          = asset.link_to_remove "Remove Asset", class: 'boxcutter'
-        = f.link_to_add "Add an Asset", :assets, class: 'boxcutter'
+          = asset.link_to_remove "Remove Asset"
+        = f.link_to_add "Add an Asset", :assets
 
       .field#existing_category
         %b Category
