jpages now displays all objects and paginates correctly

--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -5,21 +5,22 @@
   margin: 0 auto;
   padding: 1%;
   text-align: center;
-  
+
   .form {
     width: 100%;
     text-align: center;
 
     #new_category {
       display: none;
-    } 
+    }
   }
 }
 
 #map {
   height:400px;
-  width:90%;
+  width:100%;
   margin: 0 auto;
+  float: left;
 }
 
 // CSS for leaflet map on mobile
