Added people model, linked to checkins & users, and input creation into forms

--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -21,5 +21,6 @@
         .asset_media
           - if asset.media.url != nil
             = image_tag asset.media.show_checkin
-
-  / # = link_to 'Back', checkins_path
+    - if @checkin.people
+      - @checkin.people.each do |person|
+        = person.name
