--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -21,15 +21,21 @@
         = asset.link_to_remove "Remove Asset"
       = f.link_to_add "Add an Asset", :assets
 
-    / .field
-    /   = f.fields_for :people do |asset|
-    /     = asset.text_field :name
-    /     = asset.link_to_remove "Remove Person"
-    /   = f.link_to_add "Add A Person", :people
+    .field
+      = f.fields_for :people_checkins do |person|
+        = person.select 'person_id', Person.all.collect { |x| [x.name,x.id ]}
+        = person.link_to_remove "Remove Person"
+      = f.link_to_add "Add a Person", :people_checkins
+
+    .field
+      = f.fields_for :people do |person|
+        = person.text_field :name
+        = person.link_to_remove "Remove Person"
+      = f.link_to_add "New Person", :people
 
     .field#existing_category
       %b Category
-      = select "checkin", "category_id", Category.all.collect { |x| [x.name, x.id] }, include_blank: true
+      = select "checkin", "category_id", Category.belonging_to(current_user).collect { |x| [x.name, x.id] }, include_blank: true
       %button.new_category.boxcutter New Category
     .field#new_category
       %b New Category
