--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -1,48 +1,30 @@
 .new_checkin,
 .past_checkin {
-  border-radius: 10px;
-  width: 60%;
-  margin: 0 auto;
-  padding: 1%;
+  width: 90%; height: 100%;
+  margin: 0 auto; padding: 1%;
   text-align: center;
-
-  .form {
-    width: 100%;
-    text-align: center;
-
-    #new_category {
-      display: none;
-    }
+  .past_checkin_form {
+    display: none;
   }
-}
-
-.past_checkin_form {
-  display: none;
-}
-
-.checkin_buttons {
-  width: 40%; height: 71px;
-  margin: 0 auto;
-  border: 1px solid black;
-
-  .new_checkin_button,
-  .past_checkin_button {
+  .checkin_form_box {
+    border: 1px solid black;
+    width: 49.5%; height: 300px;
     float: left;
-    display: inline-block;
-    padding: 5%;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-  }
-
-  .past_checkin_button {
-    float: right;
   }
 }
 
 #map,
 #past_map {
-  height:400px;
-  width:100%;
+  height: 300px; width:100%;
   margin: 0 auto;
   float: left;
+}
+
+.submit_button {
+  width: 100%;
+  background: blue;
+  color: white;
+  font-family: 'Droid Sans';
+  font-size: 1.5em;
+  border: none;
 }
