--- a/app/views/checkins/new.html.haml
+++ b/app/views/checkins/new.html.haml
@@ -1,8 +1,5 @@
 .new_checkin
-  %h1.center-text New checkin
-  
-  #map
+  %h1.center-text NEW EXHE
 
   = render 'form'
 
-= link_to 'Back', checkins_path
