Added media file fields to form

--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -1,3 +1,9 @@
+.fileUpload {
+  width: 100%;
+  border: 1px solid black;
+  clear: both;
+}
+
 .new_checkin,
 .past_checkin {
   width: 90%; height: 100%;
