--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -22,12 +22,12 @@
           = asset.words
         .asset_media
           - if asset.media.model.file_type === 'image'
-            = image_tag asset.media, style:'height:50px;width:50px'
+            = image_tag asset.media, style:'height:100px;width:100px'
           - elsif asset.media.model.file_type === 'audio'
-            = audio_tag asset.media.url
+            = audio_tag asset.media.url, style:'height:100px;width:100px'
             = asset.media.url
           - elsif asset.media.model.file_type === 'video'
-            = video_tag asset.media.url
+            = video_tag asset.media.url, style:'height:100px;width:100px'
             = asset.media.url
           - else
             yoda
