Update checkin_index js

--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -5,7 +5,7 @@
     %option{value:'location'} Location
     %option{value:'people'} People
     %option{value:'category'} Category
-  %input{type:'text',name:'location',id:'searchLocation'}
+  %input{type:'text',name:'query',id:'searchQuery'}
 
 / JPAGES NAV PANEL
 .holder
