--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -27,7 +27,7 @@
             = audio_tag asset.media.url, style:'height:100px;width:100px'
             = asset.media.url
           - elsif asset.media.model.file_type === 'video'
-            = video_tag asset.media.url, style:'height:100px;width:100px'
+            = video_tag asset.media.url, style:'height:200px;width:175px', controls: true
             = asset.media.url
           - else
             yoda
