on user creation redirect to dashboard, show checkin page now dispalys audio and all parts are in separate divs

--- a/app/assets/stylesheets/show_checkin.css.scss
+++ b/app/assets/stylesheets/show_checkin.css.scss
@@ -5,7 +5,7 @@
   // float: left;
 }
 
-.show_checkin_map, .asset_div {
+.show_checkin_map, .asset_div, .show_checkin_people_div, .show_checkin_categories_div {
   width: 50%;
   margin-top: 30px;
   float: left;
