commented out chart but adds functionality, restyled map

--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -10,9 +10,11 @@
 / JPAGES NAV PANEL
 .holder
   / JPAGES ITEM CONTAINER
-%ul#itemContainer
+.timeline_holder
+  %ul#itemContainer
   / CHART CONTAINER
-.chartContainer
+.chart_holder
+  #chartContainer
 
   / #timeline TIMELINE
   / .buttons
