--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,16 +15,20 @@
 html, body {
   width: 100%; height: 100%;
   font-family: 'Droid Sans', sans-serif;
-  background-color: #bbb;
+  background-color: #222;
 }
 
 a {
   text-decoration: none;
-  color: #000;
+  color: #fff;
 }
 
 a:hover {
   text-decoration: none;
+}
+
+h1 {
+  color: #fff;
 }
 
 .center-text { text-align: center; }
@@ -36,7 +40,6 @@ a:hover {
   width: 10%;
   height: 100%;
 }
-
 
 .field {
   padding: 10px 0 10px 0;
@@ -56,4 +59,8 @@ a:hover {
   width: 100%;
   text-align: center;
   clear: both;
+}
+
+#map {
+  margin-bottom: 10px;
 }
