refactor and build tests

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,11 +14,12 @@
       %meta{:name =>"viewport", :content =>"width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"}
   %body{data: {page: [controller_name.capitalize, action_name.capitalize].join}}
 
-    .navbar
-      = render 'layouts/navbar'
+    .container
+      .navbar
+        = render 'layouts/navbar'
 
-    .content
-      = yield
+      .content
+        = yield
 
 
     = javascript_include_tag "application"
