--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -28,9 +28,9 @@
 
 .submit_button {
   width: 100%;
-  background: blue;
+  background: black;
   color: white;
   font-family: 'Droid Sans';
-  font-size: 1.5em;
+  font-size: 1.3em;
   border: none;
 }
