--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,5 @@
-.h1 Editing user
-= render 'form'
-= link_to 'Show', @user
-= link_to 'Back', users_path
+.edit_user
+  %h1.center-text Editing user
+    = render 'form'
+    = link_to 'Show', @user
+
