--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -17,6 +17,7 @@
           = image_tag asset.media, style:'height:100px;width:100px'
         - elsif asset.media.model.file_type === 'audio'
           = audio_tag asset.media.url, style:'height:100px;width:100px', controls: true
+          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/default_map_icon.png"
         - elsif asset.media.model.file_type === 'video'
           = video_tag asset.media.url, style:'height:200px;width:175px', controls: true
         - else
