Refactored controllers, wrote tests, fixed checkin#create & checkin#update

--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -17,6 +17,13 @@
     width: 49.5%; height: 300px;
     float: left;
   }
+
+  #checkin_title {
+    width: 100%;
+    font-size: 1.3em;
+    height: 30px;
+  }
+
 }
 
 #map,
