--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -24,7 +24,7 @@
           - if asset.media.model.file_type === 'image'
             = image_tag asset.media, style:'height:100px;width:100px'
           - elsif asset.media.model.file_type === 'audio'
-            = audio_tag asset.media.url, style:'height:100px;width:100px'
+            = audio_tag asset.media.url, style:'height:100px;width:100px', controls: true
             = asset.media.url
           - elsif asset.media.model.file_type === 'video'
             = video_tag asset.media.url, style:'height:200px;width:175px', controls: true
