--- a/app/assets/stylesheets/show_checkin.css.scss
+++ b/app/assets/stylesheets/show_checkin.css.scss
@@ -10,3 +10,18 @@
   margin-top: 30px;
   float: left;
 }
+
+
+
+.audio_image_div, #audio__image_tag_id {
+  position: relative;
+  top: 0;
+  left: 0;
+
+}
+
+#audio_image_controls {
+  position: absolute;
+  top: 30;
+  left: 70;
+}
