--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -13,6 +13,8 @@
     = link_to 'Past Checkin', past_checkin_path
   .nav_link
     = link_to 'Categories', categories_path
+  .nav_link
+    = link_to 'People', people_path
 
 - else
   .nav_link
