updated search checkins form

--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -1,11 +1,13 @@
 #map
 
-%form{id:'checkinsSearch', data: { remote: true } }
-  %select{name:'category',id:'searchCategory'}
-    %option{value:'location'} Location
-    %option{value:'people'} People
-    %option{value:'category'} Category
-  %input{type:'text',name:'query',id:'searchQuery'}
+.search_box
+  %form{id:'checkinsSearch', data: { remote: true }}
+    %select{name:'category',id:'searchCategory'}
+      %option{value:'location'} Location
+      %option{value:'people'} People
+      %option{value:'category'} Category
+    %input{type:'text',name:'query',id:'searchQuery'}
+    %button Search
 
 / JPAGES NAV PANEL
 .holder
