--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -58,7 +58,7 @@
     .words.checkin_form_box
       .field
         = f.fields_for :assets do |asset|
-          = asset.text_field :words
+          = asset.text_area :words
           = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
           = asset.link_to_remove image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/x_icon.png"
         = f.link_to_add "Add Words", :assets
