--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -23,12 +23,35 @@
     margin: 5px 0 5px 0;
   }
 
-  #checkin_title {
+  #checkin_title,
+  .past_checkin_location_search {
     width: 100%;
     font-size: 1.3em;
     height: 30px;
   }
 
+  .past_checkin_location_search {
+    width: 90%;
+    text-align: center;
+    border: none;
+  }
+
+}
+
+#searchCategory {
+  -webkit-appearance: none;
+  border: none;
+  background: none;
+  font-size: 1.3em;
+}
+
+#searchQuery {
+  width: 90%;
+  font-size: 1.3em;
+  margin-top: 4px;
+  height: 30px;
+  border: none;
+  text-align: center;
 }
 
 #map,
