Added ability to search for checkins by category

--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -4,7 +4,7 @@
   %select{name:'category',id:'searchCategory'}
     %option{value:'location'}= "Location".html_safe
     %option{value:'people'} People
-    / %option{value:'category'} Category
+    %option{value:'category'} Category
   %input{type:'text',name:'query',id:'searchQuery',placeholder:"Search"}
 
 / JPAGES NAV PANEL
