account page now does not break

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,5 +1,5 @@
 .edit_user
-  %h1.center-text Editing user
-    = render 'form'
-    = link_to 'Show', @user
+  EDIT PROFILE
+  = render 'form'
+  = link_to 'Show', @user
 
