edit page map initial changes

--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -15,6 +15,8 @@
         #map
       - if request.env['REQUEST_PATH'] === '/checkin/past'
         #past_map
+      - if request.env['REQUEST_PATH'] === "/checkin/#{@checkin.id}/edit"
+        #edit_map{data: { id: @checkin.id } }
 
       = f.hidden_field :latitude
       = f.hidden_field :longitude
