--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -44,4 +44,13 @@
     background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
   }
+
+  .errors {
+    font-size: 1em;
+    width: 90%;
+    border: 2px solid red;
+    border-radius: 5px;
+    margin: 0 auto;
+  }
+
 }
