--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -3,7 +3,7 @@
     = render 'partials/errors', resource: @checkin
 
     .title_field
-      = f.text_field :title, placeholder: ' Title'
+      = f.text_field :title, placeholder: ' Title', required: true
 
     .map
       - if request.env['REQUEST_PATH'] === '/checkins/new'
