add HTML5 form validation

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -2,7 +2,7 @@
   = render 'partials/errors', resource: @user
 
   .field
-    = f.text_field :email, placeholder: ' Email', required: true
+    = f.email_field :email, placeholder: ' Email', required: true
   .field
     = f.text_field :name, placeholder: ' Name', required: true
   .field
