--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -9,7 +9,8 @@
     text-align: center;
 
     input[type=text],
-    input[type=password] {
+    input[type=password],
+    input[type=email] {
       width: 100%;
       height: 30px;
       font-size: 1.3em;
