editing size of audio and video playback in show

--- a/app/assets/stylesheets/show_checkin.css.scss
+++ b/app/assets/stylesheets/show_checkin.css.scss
@@ -13,9 +13,10 @@
   margin: auto;
 }
 
-.asset_div {
+.asset_div, video, audio {
   max-height: 250px;
 }
+
 
 .show_checkin_map {
   text-align: center;
