--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -17,9 +17,9 @@
           = image_tag asset.media.show_checkin.url
         - elsif asset.media.model.file_type === 'audio'
           = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/audio.png"
-          = audio_tag asset.media.url, style:'height:200px;width:175px', id:'audio_tag_show_page', controls: true
+          = audio_tag asset.media.url, controls: true
         - elsif asset.media.model.file_type === 'video'
-          = video_tag asset.media.url, style:'height:200px;width:175px', controls: true
+          = video_tag asset.media.url, controls: true
 
         - else
           = asset.words
