adding category div and hide on click

--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -70,3 +70,14 @@
   font-size: 1.3em;
   border: none;
 }
+
+.category_overlay {
+  background-color: red;
+  position: relative;
+  min-height: 100%;
+}
+
+.category_content {
+  display: none;
+}
+
