--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -8,7 +8,7 @@
   %input{type:'text',name:'query',id:'searchQuery',placeholder:"Search"}
 
 / JPAGES NAV PANEL
-.holder
+.holder#centernav
 / JPAGES ITEM CONTAINER
 .timeline_holder
   %ul#itemContainer
