--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,10 +54,21 @@
 
  */
 
+ .logo {
+  width: 100%;
+  text-align: center;
+ }
+
+ #logo {
+  max-height: 200px;
+  margin: 0 auto;
+  margin-top: -20px;
+ }
+
 html, body {
   width: 100%; height: 100%;
   font-family: 'Droid Sans', sans-serif;
-  background-color: #bbb;
+  background-color: #000;
   margin: 0;
 }
 
