--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,6 +17,8 @@
         = render 'layouts/navbar'
 
       .content
+        .logo
+          = image_tag "Ehxe_logo.png", id: "logo"
         = yield
 
 
